--- a/Web_part/templates/home.html
+++ b/Web_part/templates/home.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <title>Movie Recommender</title>
-    <link rel="icon" type="image/x-icon" href="../static/imgs/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../static/media/favicon.png">
 
 
 
@@ -33,7 +33,9 @@
 
 <body onload="loading()">
 
-    <div id="preloader"></div>
+    <div id="preloader">
+        <img src="/static/media/pre3.gif" alt="Loading...">
+    </div>
     <div class="backdrop"></div>
 
     <navbar>
@@ -80,7 +82,7 @@
                         <h1>MOVIE<br>RECOMMENDER</h1>
                     </div>
 
-                    
+
 
                     <!-- ----------------  search bar ---------------------- -->
 
@@ -134,6 +136,11 @@
 
                 <div class="about_box">
                     <p>
+                        This is the Movie Recommendation Website in which you can search for a movie(under data of 4800
+                        approx. movies) and get the top 7 recommendations
+                        based on your search.<span>See Available Movies for Search by </span>
+                        <a href="/static/media/movies_title.txt" target="_blank"> Clicking Here.</a><br>*Enter the
+                        Movie Name as it is in the list.<br><br>
                         Movie recommendation using <span>CountVectorizer</span> is a natural language processing (NLP)
                         approach for recommending movies to users based on their textual reviews or descriptions.
                         CountVectorizer is a method that converts text data into a numerical format that can be used by
@@ -167,21 +174,20 @@
 
                 <div class="gradient_design">
 
-                    <div class="about_us_title">
+                    <div class="about_box_title">
                         <h3>
-                            Meet The Creators
+                            Meet The Creator
                         </h3>
                     </div>
                     <!-- ----------------------------- -->
-                    <div class="about_us">
+                    <div class="about_box">
 
                         <!--? Item1 -s -->
 
-                        <!-- <div class="p1 port_item"> -->
                         <div class="cardx card0">
                             <div class="border">
                                 <h3>Raj Chhalotre</h3>
-                                <h4>Frontend</h4>
+                                <h4>Frontend | ML </h4>
                                 <p>
                                     Front End | AI | ML | C++
                                 </p>
@@ -193,43 +199,11 @@
                                     <a href="https://github.com/Raj-Gurjar" target="_blank">
                                         <i class="fa fa-brands fa-github" aria-hidden="true"></i></a>
 
-                                    <a href="" target="_blank"><i class="fa fa-brands fa-instagram"
+                                    <a href="https://www.instagram.com/raj_gur.jar/" target="_blank"><i class="fa fa-brands fa-instagram"
                                             aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
-
-
-                        <!-- </div> -->
-
-                        <!-- <div class="p1 port_item"> -->
-                        <div class="cardx card1">
-                            <div class="border">
-                                <h3>Hemant Rajput</h3>
-                                <h4>Data Science</h4>
-                                <p>
-                                    Front End | AI | ML | C++
-                                </p>
-                                <div class="icons">
-
-                                    <a href="https://www.linkedin.com/in/hemantsinghrajput/" target="_blank"><i
-                                            class="fa fa-brands fa-linkedin" aria-hidden="true"></i></a>
-
-                                    <a href="https://github.com/hemantsinghrajput" target="_blank"><i
-                                            class="fa fa-brands fa-github" aria-hidden="true"></i></a>
-
-                                    <a href="" target="_blank"><i class="fa fa-brands fa-instagram"
-                                            aria-hidden="true"></i></a>
-
-                                </div>
-                            </div>
-                        </div>
-                        <!-- </div> -->
-
-
-
-
-
 
                     </div>
 
