--- a/Web_part/templates/movie.html
+++ b/Web_part/templates/movie.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <title>Movie Recommender</title>
-    <link rel="icon" type="image/x-icon" href="../static/imgs/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../static/media/favicon.png">
 
 
     <meta name="description" content="">
@@ -36,7 +36,9 @@
 </style>
 
 <body onload="loading()">
-    <div id="preloader"></div>
+    <div id="preloader">
+        <img src="/static/media/pre3.gif" alt="Loading....">
+    </div>
     <div class="backdrop"></div>
 
     <navbar>
