update movie list

--- a/Web_part/templates/home.html
+++ b/Web_part/templates/home.html
@@ -90,7 +90,7 @@
                     <form id="search-form" action="/" method="POST">
                         <input id="search-input" type="text" name="search" placeholder="Select or Type a Movie...">
 
-                        <button id="search-button" type="submit"><i class="fa fa-search"></i></button>
+                        <button id="search-button" type="submit" onclick="loading()" onload="loading()"><i class="fa fa-search"></i></button>
                     </form>
 
 
@@ -137,7 +137,7 @@
                 <div class="about_box">
                     <p>
                         This is the Movie Recommendation Website in which you can search for a movie(under data of 4800
-                        approx. movies) and get the top 7 recommendations
+                        approx. Hollywood movies) and get the top 7 recommendations
                         based on your search.<span>See Available Movies for Search by </span>
                         <a href="/static/media/movies_title.txt" target="_blank"> Clicking Here.</a><br>*Enter the
                         Movie Name as it is in the list.<br><br>
